[gd_scene load_steps=4 format=3 uid="uid://dsxkqerjo8lkf"]

[ext_resource type="Script" path="res://scripts/game_hud.gd" id="1_cve52"]
[ext_resource type="Script" path="res://scripts/reset_countdown.gd" id="2_ydftv"]
[ext_resource type="AudioStream" uid="uid://qeluhe0vhtlv" path="res://assets/sounds/explode.wav" id="3_bunlm"]

[node name="GameHUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cve52")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(10, 10)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -5.0
offset_right = 5.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.433701, 0.234799, 0.512672, 1)

[node name="GridContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -45.5
offset_top = 20.0
offset_right = 45.5
offset_bottom = 43.0
grow_horizontal = 2
theme_override_constants/separation = 25
alignment = 1

[node name="Player1" type="Label" parent="GridContainer"]
layout_mode = 2
text = "0"

[node name="Divider" type="Label" parent="GridContainer"]
layout_mode = 2
text = "vs."

[node name="Player2" type="Label" parent="GridContainer"]
layout_mode = 2
text = "0
"

[node name="ResetCountdown" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -61.5
offset_right = 20.0
offset_bottom = -38.5
grow_horizontal = 2
grow_vertical = 2
horizontal_alignment = 1
vertical_alignment = 1
script = ExtResource("2_ydftv")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_bunlm")
volume_db = 5.0
bus = &"SFX"
